# adf

./: .gitignore  .gitmodules  Dockerfile  Jenkinsfile  Makefile  README.md  ai_deployment_framework.cmake
.github/: dependabot.yml
xcore_interpreters/: setup.py
xcore_interpreters/host_library/: CMakeLists.txt  README.md  build.sh
xcore_interpreters/host_library/src/: xcore_interpreter_c.cpp
xcore_interpreters/xcore_firmware/: CMakeLists.txt  build.sh
xcore_interpreters/xcore_firmware/src/: main.xc  main_xscope.c  model_runner.cc  test_ops_resolver.cc
xcore_interpreters/xcore_interpreters/interpreters/: xcore_device.py  xcore_interpreter.py
xcore_interpreters/xcore_interpreters/tests/: test_interpreter.py
